# turtlebot3-workshop

./: TURTLEBOT3_SIMULATION_GUIDE (1).md  map.pgm  map.yaml  ros2_humble_setup.md
task0/: Task1.md
turtlebot3_guide/: README.md  turtlebot3_humble.repos
turtlebot3_guide/errors/: ERR_1_clean_prereqs.md  ERR_2_ros2_install.md  ERR_3_workspace_vcstool.md  ERR_4_gazebo_build.md  ERR_5_env_variables.md  ERR_6_simulation.md  ERR_7_slam.md  ERR_8_navigation.md
turtlebot3_guide/steps/: STEP_1_clean_and_prereqs.md  STEP_2_ros2_humble.md  STEP_3_workspace_vcstool.md  STEP_4_gazebo_build.md  STEP_5_env_variables.md  STEP_6_run_simulation.md  STEP_7_slam_mapping.md  STEP_8_navigation_nav2.md
workshop_task1/: CMakeLists.txt  README.md  package.xml
workshop_task1/workshop_task1/: drawcircle.py  move_robot.py  navigate_to_goal.py
